build/log/idf_py_stderr_output_112911
/home/pi/wifiRelay_2/main/wifiRelay.c: In function 'handle_post':
/home/pi/wifiRelay_2/main/wifiRelay.c:519:17: error: too many arguments for format [-Werror=format-extra-args]
  519 |     sscanf(buf, "wifi_ssid=%[^&]&wifi_pass=%[^&]&api_user=%[^&]&api_pass=%[^&]&auth_url=%[^&]&switch_url=&switch_name=%s", wifi_ssid, wifi_pass, api_user, api_pass, auth_url, switch_url,switch_name);
      |                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:87: esp-idf/main/CMakeFiles/__idf_main.dir/wifiRelay.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6157: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:149: all] Error 2
